Fixing A few more bugs